--- a/LoveComingHome/app/src/main/res/layout/activity_main.xml
+++ b/LoveComingHome/app/src/main/res/layout/activity_main.xml
@@ -17,8 +17,8 @@
             android:layout_centerInParent="true"
             android:gravity="center"
             android:textSize="18sp"
-            android:textColor="@color/text_topbar"
-            android:text="信息"/>
+            android:textColor="@color/text_orange"
+            android:text="助爱回家"/>
 
 
         <View
@@ -40,13 +40,41 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/txt_channel"
+            android:id="@+id/txt_home"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@drawable/tab_menu_bg"
             android:drawablePadding="3dp"
-            android:drawableTop="@drawable/tab_menu_channel"
+            android:drawableTop="@drawable/tab_menu_home"
+            android:gravity="center"
+            android:padding="5dp"
+            android:text="@string/tab_menu_home"
+            android:textColor="@drawable/tab_menu_text"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/txt_task"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/tab_menu_bg"
+            android:drawablePadding="3dp"
+            android:drawableTop="@drawable/tab_menu_task"
+            android:gravity="center"
+            android:padding="5dp"
+            android:text="@string/tab_menu_task"
+            android:textColor="@drawable/tab_menu_text"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/txt_alert"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/tab_menu_bg"
+            android:drawablePadding="3dp"
+            android:drawableTop="@drawable/tab_menu_alert"
             android:gravity="center"
             android:padding="5dp"
             android:text="@string/tab_menu_alert"
@@ -54,44 +82,30 @@
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/txt_message"
+            android:id="@+id/txt_comment"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@drawable/tab_menu_bg"
             android:drawablePadding="3dp"
-            android:drawableTop="@drawable/tab_menu_message"
+            android:drawableTop="@drawable/tab_menu_comment"
             android:gravity="center"
             android:padding="5dp"
-            android:text="@string/tab_menu_profile"
+            android:text="@string/tab_menu_comment"
             android:textColor="@drawable/tab_menu_text"
-            android:textSize="16sp" />
+            android:textSize="16sp"/>
 
         <TextView
-            android:id="@+id/txt_better"
+            android:id="@+id/txt_my"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@drawable/tab_menu_bg"
             android:drawablePadding="3dp"
-            android:drawableTop="@drawable/tab_menu_better"
+            android:drawableTop="@drawable/tab_menu_user"
             android:gravity="center"
             android:padding="5dp"
-            android:text="@string/tab_menu_pay"
-            android:textColor="@drawable/tab_menu_text"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/txt_setting"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/tab_menu_bg"
-            android:drawablePadding="3dp"
-            android:drawableTop="@drawable/tab_menu_setting"
-            android:gravity="center"
-            android:padding="5dp"
-            android:text="@string/tab_menu_setting"
+            android:text="@string/tab_menu_my"
             android:textColor="@drawable/tab_menu_text"
             android:textSize="16sp"/>
 
