--- a/LoveComingHome/app/src/main/res/layout/fragment_user_center.xml
+++ b/LoveComingHome/app/src/main/res/layout/fragment_user_center.xml
@@ -6,7 +6,7 @@
     xmlns:stv="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserCenterFragment">
+    tools:context=".Fragment.UserCenterFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:paddingTop="30dp"
             android:paddingBottom="10dp">
-            <com.example.lovecominghome.RoundImageView
+            <com.example.lovecominghome.Entity.RoundImageView
                 android:layout_width="90dp"
                 android:layout_height="90dp"
                 android:layout_marginLeft="@dimen/padding_left_and_right"
@@ -82,7 +82,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <com.example.lovecominghome.ItemView
+            <com.example.lovecominghome.Entity.ItemView
                 android:id="@+id/change_information"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
@@ -90,7 +90,7 @@
                 app:hiddenIcon="false"
                 app:icon="@mipmap/edit"
                 app:text="修改个人信息" />
-            <com.example.lovecominghome.ItemView
+            <com.example.lovecominghome.Entity.ItemView
                 android:id="@+id/guide"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
@@ -98,7 +98,7 @@
                 app:hiddenIcon="false"
                 app:icon="@mipmap/guide"
                 app:text="志愿服务手册" />
-            <com.example.lovecominghome.ItemView
+            <com.example.lovecominghome.Entity.ItemView
                 android:id="@+id/be_volunteer"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
@@ -106,7 +106,7 @@
                 app:hiddenIcon="false"
                 app:icon="@mipmap/be_volunteer"
                 app:text="成为志愿者" />
-            <com.example.lovecominghome.ItemView
+            <com.example.lovecominghome.Entity.ItemView
                 android:id="@+id/donation"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
@@ -114,7 +114,7 @@
                 app:hiddenIcon="false"
                 app:icon="@mipmap/donation"
                 app:text="公益捐款" />
-            <com.example.lovecominghome.ItemView
+            <com.example.lovecominghome.Entity.ItemView
                 android:id="@+id/contact_us"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
@@ -122,7 +122,7 @@
                 app:hiddenIcon="false"
                 app:icon="@mipmap/contact_us"
                 app:text="联系我们" />
-            <com.example.lovecominghome.ItemView
+            <com.example.lovecominghome.Entity.ItemView
                 android:id="@+id/my_finding"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
@@ -130,7 +130,7 @@
                 app:hiddenIcon="false"
                 app:icon="@mipmap/my_finding"
                 app:text="我的寻人" />
-            <com.example.lovecominghome.ItemView
+            <com.example.lovecominghome.Entity.ItemView
                 android:id="@+id/my_task"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
