--- a/LoveComingHome/app/src/main/res/layout/activity_main.xml
+++ b/LoveComingHome/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,11 @@
             android:text="助爱回家"/>
 
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/locationInfo"/>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="2px"
