--- a/LoveComingHome/app/src/main/res/layout/fragment_index.xml
+++ b/LoveComingHome/app/src/main/res/layout/fragment_index.xml
@@ -5,15 +5,47 @@
     android:background="@color/bg_white"
     android:orientation="vertical">
 
-    <!--    <TextView-->
-    <!--        android:id="@+id/txt_content"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="50px"-->
-    <!--        android:gravity="center"-->
-    <!--        android:text="呵呵"-->
-    <!--        android:textColor="@color/text_yellow"-->
-    <!--        android:textSize="20sp"/>-->
+    <RelativeLayout
+        android:id="@+id/ly_top_bar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/text_orange">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:src="@mipmap/camera"/>
+    <TextView
+        android:id="@+id/txt_topbar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:textColor="@color/bg_white"
+        android:text="助爱回家"/>
 
+        <ImageView
+            android:id="@+id/take_photo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:src="@mipmap/camera" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/locationInfo"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@color/div_white"
+        android:layout_alignParentBottom="true"
+
+        />
+
+
+    </RelativeLayout>
 
     <com.youth.banner.Banner
         android:id="@+id/banner"
@@ -26,5 +58,7 @@
         android:id="@+id/listview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+
 
 </LinearLayout>
