--- a/LoveComingHome/app/src/main/res/menu/menu_main.xml
+++ b/LoveComingHome/app/src/main/res/menu/menu_main.xml
@@ -3,5 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".Activity.MainActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
-
+    <item android:id="@+id/search"
+        android:title="搜索"
+        app:actionViewClass="android.widget.SearchView"
+        app:showAsAction="always"/>
+    <item android:id="@+id/camera"
+        android:title="拍照"
+        app:actionLayout="@layout/camera"
+        app:showAsAction="always"/>
 </menu>
