--- a/LoveComingHome/app/src/main/res/values/styles.xml
+++ b/LoveComingHome/app/src/main/res/values/styles.xml
@@ -3,9 +3,10 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">@color/text_orange</item>
+        <item name="colorPrimaryDark">@color/text_orange</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:actionMenuTextColor">@color/bg_black</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
